- Fixed layout bug - Manual registration still in progress

--- a/SCE11-0353/Styles/Site.css
+++ b/SCE11-0353/Styles/Site.css
@@ -3,6 +3,7 @@
 .collapsePanel
 {
     padding: 5px 5px 5px 5px;
+    width: 60%;
 }
 
 .collapsePanelHeader
@@ -13,6 +14,7 @@
     font-weight: bold;
     padding: 5px 5px 5px 5px;
     vertical-align: middle;
+    width: 60%;
 }
 
 /* FORM ELEMENTS   
